--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "chai": "^4.1.1",
     "mocha": "^3.5.0",
+    "standard": "^16.0.3",
     "supertest-session": "^3.1.0"
   }
 }
